[tool.poetry]
name = "repl_nix_site-yoyo77651"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
fabric = "^2.7.1"
Flask = "^2.2.2"
gevent = "^21.12.0"
Jinja2 = "^3.1.2"
pelican = "^4.8.0"
pytz = "^2022.2.1"
typogrify = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
